fix: wrapping

--- a/src/styles/mixins/_tables.scss
+++ b/src/styles/mixins/_tables.scss
@@ -367,7 +367,7 @@
                     }
 
                     .k-empty-state {
-                      background-color: var(--kui-color-background-neutral-weakest, var(--kui-color-background-neutral-weakest, $kui-color-background-neutral-weakest));
+                      background-color: var(--kui-color-background-neutral-weakest, $kui-color-background-neutral-weakest);
                     }
                   }
                 }
